--- a/frontend/src/components/authForm/authForm.css
+++ b/frontend/src/components/authForm/authForm.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 1rem;
     gap: 2rem;
     font-size: var(--text-font-size);
     font-family: var(--font-family);
