--- a/frontend/src/components/authForm/authForm.css
+++ b/frontend/src/components/authForm/authForm.css
@@ -1,10 +1,14 @@
+.auth-section{
+    margin: 0.8rem;
+    padding: 1rem;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1);
+}
 .auth-form {
     width: 15rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1rem;
-    gap: 2rem;
+    gap: 1.5rem;
     font-size: var(--text-font-size);
     font-family: var(--font-family);
 }
