--- a/frontend/src/components/authForm/authForm.css
+++ b/frontend/src/components/authForm/authForm.css
@@ -1,4 +1,7 @@
 .auth-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0.8rem;
     padding: 1rem;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1);
@@ -7,7 +10,6 @@
     width: 15rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 1.5rem;
     font-size: var(--text-font-size);
     font-family: var(--font-family);
@@ -53,4 +55,9 @@
 
 .toggle-auth:hover{
     font-size: 1rem;
+}
+.error {
+    color: red;
+    font-size: 0.8rem;
+
 }
