--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,19 +1,25 @@
 nav{
     width: 100%;
-    background-color: transparent;
+    background: linear-gradient(to bottom, #e6d7bc 0%,  #e6d7ba 90%, transparent 100%);
     font-size: 1.1rem;
     position: sticky;
     top: 0;
     padding: var(--container-padding);
     z-index: 999;
-    background: #f2f5f1;
-    border-bottom: 1px solid white;
 }
 
 .logo-container{
     padding-left: 1em;
     font-size: 1.5em;
 }
+
+.logo-container img{
+    width: 5rem;
+    height: 3rem;
+    object-fit: cover;
+    border-radius: 5%;
+}
+
 .nav-wrapper{
     display: flex;
     justify-content: space-between;
@@ -33,4 +39,3 @@ li{
     list-style: none;
     padding: 0 1rem;
 }
-
