--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,12 +6,12 @@
   /* Color Palette - Focused and Professional */
   --primary-color: #036601;
   --background: linear-gradient(to top, transparent 0%, hsla(0, 0%, 0%, 0.3) 50%, hsla(0, 0%, 0%, 0.7) 100% );
-  --dark-green: #03a413;
-  --light-green: #3bbe3b;
+  --dark-teal: #027474;
+  --light-teal: #029696;
   --light-gray: #f5f5f5;
   --dark-gray: #424242;
-  --button-bg-color: #00695c;
-  --button-hover-bg-color: #004c40;
+  --button-bg-color: #008080;
+  --button-hover-bg-color: #27a8a8;
 
   /* Typography */
   --font-family: 'Roboto', 'Arial', sans-serif, 'Helvetica Neue';
@@ -21,7 +21,7 @@
   --text-font-size: 1rem;
 
   /* Spacing and Layout */
-  --container-padding: 2rem;
+  --container-padding: 0.8rem;
   --border-radius: 8px;
 
   /* Shadows and Borders */
@@ -38,15 +38,17 @@ body {
   background-size: cover;
   font-family: var(--font-family);
   line-height: var(--line-height);
+  width: 100vw;
+  height: 100vh;
 }
 
 .app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: var(--container-padding);
   background-color: var(--light-gray); 
   box-shadow: var(--box-shadow);
-  max-width: 75rem;
+  max-width: 100%;
   margin: auto;
+
 }
