--- a/frontend/src/components/button/button.css
+++ b/frontend/src/components/button/button.css
@@ -27,3 +27,19 @@ flex-center-button,
     transform: translateY(-1px);
     box-shadow: 0px 5px 10px 0px #fec64450;
 }
+
+
+.primary-background-button {
+    background-color: var(--button-bg-color);
+    color: var(--light-gray);
+}
+
+.black-background-button {
+    background: #000;
+    color: #fff;
+}
+
+.white-background-button {
+    background: #fff;
+    color: #222;
+}
