--- a/frontend/src/components/button/button.css
+++ b/frontend/src/components/button/button.css
@@ -60,3 +60,8 @@ flex-center-button,
     background-color: var(--button-bg-color);
     color: var(--light-gray);
 }
+
+
+.medium-size-button {
+    padding: 0.6em 1.8em;
+}
