Add white button variation

--- a/frontend/src/components/button/button.css
+++ b/frontend/src/components/button/button.css
@@ -65,3 +65,13 @@ flex-center-button,
 .medium-size-button {
     padding: 0.6em 1.8em;
 }
+
+.white-border-button {
+    border-color: #fff;
+    color: #fff;
+}
+
+.white-border-button:hover {
+    background-color: #fff;
+    color: #222;
+}
