--- a/frontend/src/components/sideBar/sideBar.css
+++ b/frontend/src/components/sideBar/sideBar.css
@@ -14,3 +14,20 @@
     border-radius: 5px;
     transition: width 0.4s ease-in-out;
 }
+
+.side-bar ul {
+    list-style: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.side-bar a {
+    text-decoration: none;
+    color: white;
+    padding: var(--container-padding);
+    display: block;
+    transition: all 0.3s ease;
+    border-radius: 5px;
+    margin-bottom: 5px; /* Spacing between items */
+}
