--- a/frontend/src/components/sideBar/sideBar.css
+++ b/frontend/src/components/sideBar/sideBar.css
@@ -31,3 +31,26 @@
     border-radius: 5px;
     margin-bottom: 5px; /* Spacing between items */
 }
+
+.side-bar a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    transform: scale(1.05);
+}
+
+.side-bar a:active {
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+.side-bar a:hover::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    z-index: -1;
+    transition: all 0.3s ease;
+    transform: scale(1.1);
+}
