--- a/frontend/src/components/post/postItem.css
+++ b/frontend/src/components/post/postItem.css
@@ -2,9 +2,12 @@
   border: 1px solid #e1e4e8;
   border-radius: 8px;
   padding: 1rem;
-  background-color: #fff;
+  color: white;
+  width: 50vw;
+  background-color: rgb(20, 20, 20);
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   margin-bottom: 1rem;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .post-header {
