--- a/frontend/src/components/post/postItem.css
+++ b/frontend/src/components/post/postItem.css
@@ -23,11 +23,13 @@
 }
 
 .author-image {
-  width: 3rem; /* 48px */
-  height: 3rem; /* 48px */
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 1rem;
+  border: 2px solid #0073b1;
+  transition: border 0.3s ease;
 }
 
 .author-info {
