--- a/frontend/src/components/post/postItem.css
+++ b/frontend/src/components/post/postItem.css
@@ -32,6 +32,10 @@
   transition: border 0.3s ease;
 }
 
+.author-image:hover {
+  border: 2px solid #e1e4e8;
+}
+
 .author-info {
   display: flex;
   flex-direction: column;
