--- a/frontend/src/components/post/postItem.css
+++ b/frontend/src/components/post/postItem.css
@@ -82,20 +82,23 @@
 }
 
 .post-actions {
+  margin: 0 5em;
+
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
-.like-button, .comment-button {
+.like-button, .comment-button, .share-button, .fast-apply-button {
+  display: flex;
+  align-items: center;
   background: none;
   border: none;
   border-radius: 0.5rem;
   color: #0073b1;
   font-size: 1.5rem;
   cursor: pointer;
-  padding: 0.5rem;
-  margin-right: 2rem;
-  transition: background-color 0.3s ease;
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
 }
 
 .like-button:hover, .comment-button:hover {
