--- a/frontend/src/components/post/postItem.css
+++ b/frontend/src/components/post/postItem.css
@@ -101,6 +101,7 @@
   margin-right: 1rem;
 }
 
-.like-button:hover, .comment-button:hover {
+.like-button:hover, .comment-button:hover, .share-button:hover, .fast-apply-button:hover {
   background-color: #e1e4e8;
+  transform: scale(1.1);
 }
