--- a/frontend/src/components/postForm/postForm.css
+++ b/frontend/src/components/postForm/postForm.css
@@ -1,16 +1,26 @@
 .post-form-section {
-    color: #fff;
-    background-color: var(--card-bg-color);
-    padding: var(--container-padding);
-    border-radius: var(--border-radius);
-    margin: 2rem;
-    box-shadow: var(--box-shadow);
-    transition: var(--transition);
-  }
-
+  color: #fff;
+  background-color: var(--card-bg-color);
+  padding: var(--container-padding);
+  border-radius: var(--border-radius);
+  margin: 2rem;
+  box-shadow: var(--box-shadow);
+  transition: var(--transition);
+}
 
 .post-form-section h2 {
-    font-size: var(--heading-font-size);
-    margin-bottom: 1rem;
-    text-align: center;
-  }
+  font-size: var(--heading-font-size);
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.post-form-group {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.post-form-group label {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+}
