--- a/frontend/src/components/postForm/postForm.css
+++ b/frontend/src/components/postForm/postForm.css
@@ -27,6 +27,8 @@
 
 .form-input,
 .post-form-textarea {
+  font-size: 1rem;
+  color: #fff;
   padding: 0.5rem;
   border-radius: var(--border-radius);
   border: var(--border);
@@ -43,4 +45,20 @@
 .post-form-textarea {
   height: 6rem;
   resize: vertical;
+}
+
+.submit-button {
+  background-color: var(--button-bg-color);
+  padding: 0.75rem 1.5rem;
+  border-radius: var(--border-radius);
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 1rem;
+  margin-top: 1rem;
+  align-self: center;
+}
+
+.submit-button:hover {
+  background-color: var(--button-hover-bg-color);
 }
